--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/auth.js"></script> <script src="js/api.js"></script>  <script src="js/ui.js"></script>
+<script src="js/auth.js?v=1.1"></script>
+<script src="js/api.js?v=1.1"></script>
+<script src="js/ui.js?v=1.1"></script>
 </body>
 </html>
