--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/auth.js?v=1.1"></script>
-<script src="js/api.js?v=1.1"></script>
-<script src="js/ui.js?v=1.1"></script>
+<script src="js/config.js?v=1.2"></script>
+<script src="js/auth.js?v=1.2"></script>
+<script src="js/api.js?v=1.2"></script>
+<script src="js/ui.js?v=1.2"></script>
 </body>
 </html>
