--- a/login.html
+++ b/login.html
@@ -65,6 +65,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/auth.js"></script>
+<script src="js/config.js?v=1.2"></script> 
+<script src="js/auth.js?v=1.2"></script>
 </body>
 </html>
